moved bootstrap file

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>HangMan</title>
 	<link rel="stylesheet" href="assets/css/reset.css">
-	<link rel = "stylesheet" href="../../bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body class = bg-primary>
